--- a/ch3-mysql/wordpress-deployment.yaml
+++ b/ch3-mysql/wordpress-deployment.yaml
@@ -23,6 +23,10 @@ spec:
         env:
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
+        - name: WORDPRESS_DB_USER
+          value: root
+        - name: WORDPRESS_DEBUG
+          value: "true"
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
